
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-04-19 niel
	Mrg: PR 2113, from Wally73 - simple-expanded.sh Screen script.
	Chg: Removed the .../cli/versions.php script. Use './zed version all' instead.
	Chg: Added nZEDb to li3 as a library, complete with .../nzedb/bootstrap.php file.
	Fix: Issue with `./zed update db` not working as expected. Mostly caused by not having nZEDb
		added into lithium as a library (see above).
2016-04-18 niel
	Add: 'branch' option to the versions console command. This tells you which git branch you're on.
	Add: Finished 'db' option for the update command. This checks for patches and updates the
		database accordingly (replaces .../cli/update_db.php script which will be removed shortly).
	Chg: Removed the .../cli/update_db.php script. Use './zed update db' to replicate, or './zed
		update nzedb' for everything in one operation.
2016-04-18 DariusIII
	Upd: Update .gitignore
	Upd: Update composer.json
2016-04-15 DariusIII
	Fix: Fix filelist display in all of the themes, reduce overhead in NZB class related to segments array.
2016-04-14 niel
	Add: Version console command.
2016-04-14 DariusIII
	Fix: Fix division by zero error when viewing filelist in Alpha and Default themes.
2016-04-13 niel
	Add: Refactored version of nzedb\utils\Git to li3 app\extensions\util\Git.
2016-04-11 niel
	Add: Initial 'Update' console command. Currently only updates the repo (via composer).
		 ***NOTE*** `./zed update nzedb` is now the prefered method of updating. Do not `git pull`
		unless you know what you might be screwing up ;-)
2016-04-11 DariusIII
	Fix: Update autopatcher - fix issue #2096
	Fix: Fix NFO display on coverpages in Light/Default themes.Second part of fixes for issue #2099
2016-04-10 niel