@@ -8,7 +8,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
-
+2016-04-26 niel
+	Add: Hash of git's current HEAD to version console command's git option.
 2016-04-19 niel
 	Mrg: PR 2113, from Wally73 - simple-expanded.sh Screen script.
 	Chg: Removed the .../cli/versions.php script. Use './zed version all' instead.
